--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -43,9 +43,9 @@
    <widget class="QLabel" name="resultLabel">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>140</y>
-      <width>841</width>
+      <x>0</x>
+      <y>130</y>
+      <width>651</width>
       <height>91</height>
      </rect>
     </property>
@@ -68,7 +68,46 @@
      </rect>
     </property>
     <property name="maximum">
-     <number>500000</number>
+     <number>256</number>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="eraInput">
+    <property name="geometry">
+     <rect>
+      <x>670</x>
+      <y>20</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>800000000</number>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="eraBtn">
+    <property name="geometry">
+     <rect>
+      <x>790</x>
+      <y>30</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Calculate</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>70</y>
+      <width>251</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Enter number and we will calculate primes for you</string>
     </property>
    </widget>
   </widget>
