--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>918</width>
-    <height>419</height>
+    <width>1107</width>
+    <height>655</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -43,8 +43,8 @@
    <widget class="QLabel" name="resultLabel">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>130</y>
+      <x>20</x>
+      <y>110</y>
       <width>651</width>
       <height>91</height>
      </rect>
@@ -74,8 +74,8 @@
    <widget class="QSpinBox" name="eraInputUpper">
     <property name="geometry">
      <rect>
-      <x>690</x>
-      <y>20</y>
+      <x>190</x>
+      <y>230</y>
       <width>91</width>
       <height>31</height>
      </rect>
@@ -87,8 +87,8 @@
    <widget class="QPushButton" name="eraBtn">
     <property name="geometry">
      <rect>
-      <x>790</x>
-      <y>30</y>
+      <x>290</x>
+      <y>240</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -100,9 +100,9 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>640</x>
-      <y>70</y>
-      <width>251</width>
+      <x>50</x>
+      <y>290</y>
+      <width>321</width>
       <height>51</height>
      </rect>
     </property>
@@ -113,8 +113,8 @@
    <widget class="QSpinBox" name="eraInputLower">
     <property name="geometry">
      <rect>
-      <x>580</x>
-      <y>20</y>
+      <x>80</x>
+      <y>230</y>
       <width>91</width>
       <height>31</height>
      </rect>
@@ -126,11 +126,37 @@
    <widget class="QListWidget" name="listWidget">
     <property name="geometry">
      <rect>
-      <x>640</x>
-      <y>150</y>
+      <x>80</x>
+      <y>380</y>
       <width>256</width>
       <height>192</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="eraCount">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>340</y>
+      <width>101</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="eraShowBtn">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>340</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Show</string>
     </property>
    </widget>
   </widget>
