--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -83,14 +83,17 @@
     <property name="maximum">
      <number>2000000</number>
     </property>
+    <property name="value">
+     <number>2000000</number>
+    </property>
    </widget>
    <widget class="QPushButton" name="eraBtn">
     <property name="geometry">
      <rect>
       <x>290</x>
-      <y>240</y>
-      <width>75</width>
-      <height>23</height>
+      <y>230</y>
+      <width>81</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -149,7 +152,7 @@
    <widget class="QPushButton" name="eraShowBtn">
     <property name="geometry">
      <rect>
-      <x>190</x>
+      <x>240</x>
       <y>340</y>
       <width>75</width>
       <height>23</height>
@@ -183,6 +186,32 @@
     </property>
     <property name="value">
      <number>24</number>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="eraPauseBtn">
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>230</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Pause</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="eraCancelBtn">
+    <property name="geometry">
+     <rect>
+      <x>470</x>
+      <y>230</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Cancel</string>
     </property>
    </widget>
   </widget>
