--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -68,7 +68,10 @@
      </rect>
     </property>
     <property name="maximum">
-     <number>256</number>
+     <number>30000</number>
+    </property>
+    <property name="value">
+     <number>1000</number>
     </property>
    </widget>
    <widget class="QSpinBox" name="eraInputUpper">
