--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -30,10 +30,10 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>40</y>
-      <width>75</width>
-      <height>23</height>
+      <x>200</x>
+      <y>30</y>
+      <width>81</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -71,7 +71,7 @@
      <number>30000</number>
     </property>
     <property name="value">
-     <number>1000</number>
+     <number>10000</number>
     </property>
    </widget>
    <widget class="QSpinBox" name="eraInputUpper">
@@ -168,8 +168,8 @@
    <widget class="QProgressBar" name="factorialProgressBar">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>150</y>
+      <x>150</x>
+      <y>100</y>
       <width>118</width>
       <height>23</height>
      </rect>
@@ -215,6 +215,32 @@
     </property>
     <property name="text">
      <string>Cancel</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="factorialCancelBtn">
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>30</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Cancel</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="factorialPauseBtn">
+    <property name="geometry">
+     <rect>
+      <x>290</x>
+      <y>30</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Pause</string>
     </property>
    </widget>
   </widget>
